[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Challenge.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "BookAnimation",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33, 33.25 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "PopUp",
"speed": 5.0
} ]

[node name="Challenge" type="Node"]
script = ExtResource( 1 )

[node name="ChallengeBox" type="Area2D" parent="."]
position = Vector2( 67, 106 )
__meta__ = {
"_edit_group_": true
}

[node name="ChallengeBookSprite" type="AnimatedSprite" parent="ChallengeBox"]
position = Vector2( -36, -14 )
frames = SubResource( 1 )
animation = "BookAnimation"

[node name="ChallengeCollision" type="CollisionShape2D" parent="ChallengeBox"]
position = Vector2( -36, -14 )
shape = SubResource( 2 )

[node name="ChallengePopUpSprite" type="AnimatedSprite" parent="ChallengeBox"]
visible = false
position = Vector2( -36, -78 )
frames = SubResource( 3 )
animation = "PopUp"

[connection signal="body_entered" from="ChallengeBox" to="." method="_on_ChallengeBox_body_entered"]
[connection signal="body_exited" from="ChallengeBox" to="." method="_on_ChallengeBox_body_exited"]
